name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
  exposed-modules:
    Backend
  other-modules:  Backend.Stack
                , Backend.App
                , Backend.Site
                , Backend.HackerNews
                , Backend.Reddit
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
                , aeson
                , aeson-casing
                , async
                , backend
                , bytestring
                , common
                , containers
                , directory
                , envy
                , filepath
                , frontend
                , http-client >= 0.5
                , katip
                , lens
                , lens-aeson
                , lifted-async
                , lifted-base
                , modern-uri
                , obelisk-backend
                , obelisk-executable-config
                , obelisk-executable-config-inject
                , raw-strings-qq
                , safe-exceptions >= 0.1
                , scotty
                , stm
                , text
                , time
                , transformers
                , wai-extra
                , wai-middleware-static
                , wreq
