name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
                , aeson
                , aeson-casing
                , async
                , bytestring
                , common
                , containers
                , data-default
                , directory
                , envy
                , filepath
                , frontend
                , http-client >= 0.5
                , lens
                , lens-aeson
                , lifted-async
                , lifted-base
                , modern-uri
                , obelisk-backend
                , obelisk-asset-serve-snap
                , obelisk-snap
                , snap-server
                , snap
                , reflex-dom
                , obelisk-executable-config
                , obelisk-executable-config-inject
                , raw-strings-qq
                , safe-exceptions >= 0.1
                , stm
                , text
                , time
                , transformers
                , wai-extra
                , wai-middleware-static
                , wreq
                , dependent-sum
                , dependent-sum-template
                , obelisk-backend
                , obelisk-route
  exposed-modules:
    Backend
  other-modules:  Backend.App
                , Backend.Site
                , Backend.HackerNews
                , Backend.Reddit
                , Backend.Entrypoint
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
                , aeson
                , aeson-casing
                , async
                , backend
                , bytestring
                , common
                , containers
                , data-default
                , directory
                , envy
                , filepath
                , frontend
                , http-client >= 0.5
                , lens
                , lens-aeson
                , lifted-async
                , lifted-base
                , modern-uri
                , obelisk-backend
                , obelisk-snap
                , obelisk-asset-serve-snap
                , snap-server
                , snap
                , reflex-dom
                , obelisk-executable-config
                , obelisk-executable-config-inject
                , raw-strings-qq
                , safe-exceptions >= 0.1
                , stm
                , text
                , time
                , transformers
                , wai-extra
                , wai-middleware-static
                , wreq
                , dependent-sum
                , dependent-sum-template
                , obelisk-backend
                , obelisk-route