name:                common
version:             0.1.0.0
homepage:            https://github.com/srid/slownews
license:             BSD3
license-file:        LICENSE
author:              Sridhar Ratnakumar
maintainer:          srid@srid.ca
category:            Web
build-type:          Simple

-- extra-source-files:  ChangeLog.md

cabal-version:       >=1.10


library
  exposed-modules: SlowNews.Link
  -- other-modules:       
  -- other-extensions:    
  
  build-depends: base >=4.9 && <4.10
               , aeson
               , aeson-casing
               , text
  
  -- Directories containing source files.
  hs-source-dirs: src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
