name:                common
version:             0.1.0.0
homepage:            https://github.com/srid/slownews
author:              Sridhar Ratnakumar
maintainer:          srid@srid.ca
category:            Web
build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules: SlowNews.Link
  
  build-depends: base
               , aeson
               , aeson-casing
               , text
  
  hs-source-dirs: src
  
  default-language:    Haskell2010
  
