name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , aeson-casing
               , text
               , dependent-sum
               , dependent-sum-template
               , obelisk-route
               , mtl
               , universe
  exposed-modules:
    Common.Link
    Common.Route
  ghc-options: -Wall
