name:                slownews-frontend
version:             0.1.0.0
synopsis:            SlowNews Frontend
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base, containers, miso
  default-language:    Haskell2010
