name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , string-conv
               , clay
               , bytestring
               , common
               , reflex-dom
               , text
               , time
               , obelisk-frontend
               , obelisk-route
               , obelisk-generated-static
               , jsaddle
  exposed-modules:
    Frontend
  other-modules:
    Frontend.CSS
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends:  aeson
                , base
                , clay
                , bytestring
                , common
                , containers
                , jsaddle
                , jsaddle-warp
                , reflex-dom
                , reflex-dom-core
                , text
                , string-conv
                , time
                , obelisk-frontend
                , obelisk-route
                , obelisk-generated-static
                , jsaddle
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
