name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , string-conv
               , clay
               , bytestring
               , common
               , reflex-dom
               , text
               , time
               , obelisk-frontend
               , obelisk-route
               , obelisk-generated-static
               , jsaddle
  exposed-modules:
    Frontend
  other-modules:
    Frontend.CSS
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  -- ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
