name:                slownews-frontend
version:             0.1.0.0
synopsis:            SlowNews Frontend
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , containers
                     , ghcjs-base
                     , miso
                     , time
  default-language:    Haskell2010
