name:                slownews-frontend
version:             0.1.0.0
synopsis:            SlowNews Frontend
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-missing-import-lists
                       -ddump-minimal-imports
  build-depends:       aeson
                     , base
                     , containers
                     , ghcjs-base
                     , miso
                     , time
  other-modules:    Foreign
  default-language:    Haskell2010
