name:                slownews-frontend
version:             1.0.0.0
synopsis:            SlowNews Frontend
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:      src 
  main-is:             Frontend.hs
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-missing-import-lists
                       -ddump-minimal-imports
  build-depends:       aeson
                     , base
                     , common
                     , containers
                     , jsaddle-warp
                     , reflex-dom
                     , reflex-dom-core
                     , time
  default-language:    Haskell2010
